@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-401: Metrics should be disabled by default (apresta)
+
   GIRAPH-400: Refactoring broke
   TestTextDoubleDoubleAdjacencyListVertexInputFormat (apresta)
 
